--- a/Flipkart_Reviews_Sentiment_Analysis_using_Python.ipynb
+++ b/Flipkart_Reviews_Sentiment_Analysis_using_Python.ipynb
@@ -37,6 +37,7 @@
       "source": [
         "import nltk\n",
         "nltk.download('stopwords')\n",
+        "nltk.download('punkt_tab')\n",
         "from nltk.corpus import stopwords"
       ],
       "metadata": {
